2006-03-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c
	(gnome_vfs_mime_get_all_desktop_entries):
	Fix leak (#331931)
	Patch from Martin Wehner

2006-03-01  Tor Lillqvist  <tml@novell.com>

	* test/Makefile.am: test-parse-ls-lga is Unix-only.

	* test/test-long-cancel.c: Make it build on Win32, too.

2006-02-28  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c:
	Try to log in anonymously when possible.
	This fixes problems browsing workgroups and gives
	a lot less auth dialogs. However, it means you must put
	the username in the uri if you want to log in with a username
	on a share where anon login is allowed.
	Patch from Nate Nielsen

2006-02-28  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (get_access_info):
	Fix bug in optimization that made us overwrite the normal
	permissions.

2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.13.92 ===
	
2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-dns-sd.c:
	Don't use AVAHI_LOOKUP_USE_MULTICAST (#332634)
	patch from Mathias Hasselmann

2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-uri.c:
	Add g_return_val_if_fail for some arguments.
	Add details to docs for gnome_vfs_uri_is_local.
	Patch from Christian Neumair

2006-02-27  Christian Neumair  <chris@gnome-de.org>

        * src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Make
        priority equality check more robust so that it works for three or more
        matches. Also allow matchlets with 0 priority.
	
2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_make_uri_from_input_internal):
	Prepend file:///, not file:// for strings that doesn't start with a slash.
	Fixes #329781

2006-02-27  Alexander Larsson  <alexl@redhat.com>
